# gluegun

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: mdbook.yml  rust.yml
book/: book.toml
book/src/: SUMMARY.md  api.md  axioms.md  idl.md  intro.md  public-interface.md  related_work.md  tutorial.md
book/src/mapping/: c.md  cpp.md  java.md  wit.md
crates/carcin-idl/: Cargo.toml
crates/carcin-idl/src/: error.rs
crates/carcin-idl/src/parse/: known_rust.rs  util.rs
crates/cargo-carcin/: Cargo.toml
crates/cargo-gluegun/: Cargo.toml
crates/cargo-gluegun/src/: lib.rs  main.rs
crates/cargo-lingo/: Cargo.toml
crates/gluegun-core/: Cargo.toml
crates/gluegun-core/src/: cli.rs  codegen.rs  lib.rs
crates/gluegun-core/src/codegen/: code_writer.rs  helper_command.rs  library_crate.rs  separator.rs
crates/gluegun-dummy/: Cargo.toml
crates/gluegun-dummy/src/: main.rs
crates/gluegun-idl/: Cargo.toml
crates/gluegun-idl/src/: error.rs  ir_items.rs  ir_types.rs  parse.rs  span.rs
crates/gluegun-idl/src/parse/: known_rust.rs  modifier.rs  pass1.rs  pass2.rs  util.rs
crates/gluegun-java/: Cargo.toml
crates/gluegun-java-util/: Cargo.toml
crates/gluegun-java-util/src/: build_rs.rs  lib.rs  main_rs.rs  util.rs
crates/gluegun-java/src/: java_gen.rs  main.rs  rs_gen.rs  util.rs
crates/gluegun-py/: Cargo.toml
crates/gluegun-py/src/: main.rs  rs_gen.rs
crates/gluegun-test-harness/: Cargo.toml
crates/gluegun-test-harness/src/: idl_test.rs  lib.rs  test_definition.rs
crates/gluegun-wasm/: Cargo.toml
crates/gluegun-wasm/src/: main.rs  rs_gen.rs
crates/lingo-star-idl/: Cargo.toml
crates/lingo-star-idl/src/: error.rs  ir_items.rs  ir_types.rs  lib.rs  parse.rs
crates/lingo-star-idl/src/parse/: known_rust.rs  pass1.rs  pass2.rs  util.rs
demos/hello_world/carcin/: Cargo.toml
demos/hello_world/carcin/src/: lib.rs
demos/hello_world/carcin/wit/: hello_world.wit
demos/hello_world/gluegun/: Cargo.toml
demos/hello_world/gluegun/src/: lib.rs
demos/hello_world/gluegun/wit/: hello_world.wit
demos/hello_world/squared/: Cargo.toml
demos/hello_world/squared/src/: lib.rs
demos/hello_world/squared/wit/: hello_world.wit
demos/hello_world/src/: lib.rs
idl-tests/: README.md  character.idl  greetings.idl  greetings.rs  hello_world.idl
src/: error.rs  ir_items.rs  ir_types.rs  lib.rs  parse.rs
src/parse/: known_rust.rs  pass2.rs
test/idl/: character.idl  character.rs  greetings.idl  hello_world.idl  hello_world.rs
tests/: harness.rs  idl_tests.rs
