[package]
name = "gluegun"
version = "0.1.0"
edition = "2021"
description = "Placeholder"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gluegun/gluegun"
documentation = "https://gluegun.github.io/gluegun"

[lib]
proc-macro = true

[[test]]
name = "harness"
harness = false

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"


[workspace]
members = [ "crates/cargo-gluegun", "crates/gluegun-idl",
    "demos/hello_world",
    "demos/hello_world/gluegun/",
]

[dev-dependencies]
anyhow = "1.0.95"
lazy_static = "1.5.0"
gluegun-idl = { path = "crates/gluegun-idl" }
progress_bar = "1.0.6"
serde_json = "1.0.135"
similar = "2.6.0"
walkdir = "2.5.0"
