[package]
name = "gluegun"
version = "0.1.0"
edition = "2021"
description = "Placeholder"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gluegun/gluegun"
documentation = "https://gluegun.github.io/gluegun"

[lib]
proc-macro = true

[workspace]
members = [
    "crates/cargo-gluegun",
    "crates/gluegun-core", "crates/gluegun-dummy",
    "crates/gluegun-idl",
    "crates/gluegun-java", "crates/gluegun-java-util", "crates/gluegun-test-harness", 
    "demos/hello_world",
]

[workspace.metadata.gluegun]
plugin_command = "cargo run -q -p gluegun-{plugin} --"

[dev-dependencies]
anyhow = "1.0.95"
camino = "1.1.9"
gluegun-test-harness = { path = "crates/gluegun-test-harness" }

[dependencies]
syn = "2.0.96"
