[package]
name = "gluegun"
version = "0.1.0"
edition = "2021"
description = "Placeholder"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gluegun-rs/gluegun"
documentation = "https://gluegun-rs.github.io/gluegun"

[lib]
proc-macro = true

[workspace]
members = [
    "crates/cargo-gluegun",
    "crates/gluegun-core", "crates/gluegun-dummy",
    "crates/gluegun-idl",
    "crates/gluegun-java", "crates/gluegun-java-util", "crates/gluegun-py", "crates/gluegun-test-harness", "crates/gluegun-wasm", 
    "demos/hello_world",
]

[workspace.metadata.gluegun]
plugin-command = "cargo run -q -p gluegun-{plugin} --"
destination-path = "sibling"

[dev-dependencies]
anyhow = "1.0.95"
camino = "1.1.9"
gluegun-test-harness = { path = "crates/gluegun-test-harness" }

[dependencies]
syn = "2.0.96"
