[package]
name = "carcin-idl"
version = "0.1.0"
edition = "2021"

[dependencies]
accessors-rs = "0.1.0"
proc-macro2 = { version = "1.0.92", features = ["span-locations"] }
serde = { version = "1.0.217", features = ["alloc", "derive", "rc"] }
serde_with = "3.12.0"
syn = { version = "2.0.94", features = ["full", "visit"] }
thiserror = "2.0.9"
typed-arena = "2.0.2"
