[package]
name = "gluegun-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
gluegun-idl = { version = "0.1.0", path = "../gluegun-idl" }
serde_json = "1.0.135"
thiserror = "2.0.11"
accessors-rs = "0.1.0"
serde = { version = "1.0.217", features = ["derive"] }
which = "7.0.2"
