[package]
name = "gluegun-test-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
camino = "1.1.9"
cargo-gluegun = { version = "0.1.0", path = "../cargo-gluegun" }
cp_r = "0.5.2"
gluegun-idl = { version = "0.1.0", path = "../gluegun-idl" }
lazy_static = "1.5.0"
serde_json = "1.0.135"
similar = "2.6.0"
temp-dir = "0.1.14"
